Gist: Remove line spacing hack since GitHub fixed it on their side

--- a/github-dark.css
+++ b/github-dark.css
@@ -164,10 +164,6 @@
     position: relative;
     top: -1.5px;
   }
-  /* HACK: Fix Gist line alignment */
-  .file-data pre, .line-data {
-    line-height: inherit !important;
-  }
   /* === show === */
   .color-label.selected .color {
     display: block !important;
